load("//third_party/java:rules.bzl", "java_library", "java_testng")

CLIENT_TEST_JVM_FLAGS = [
    "-Dreplicant.check_diagnostic_messages=false",
    "-Dreplicant.diagnostic_messages_file=$(rootpath //client/src/test/java/replicant:diagnostic_messages.json)",
]

CLIENT_TEST_DATA = ["//client/src/test/java/replicant:diagnostic_messages.json"]

CLIENT_TEST_CLASSES = [
    "replicant.AreaOfInterestRequestTest",
    "replicant.AreaOfInterestServiceTest",
    "replicant.AreaOfInterestTest",
    "replicant.CacheEntryTest",
    "replicant.ChannelAddressTest",
    "replicant.ChannelChangeDescriptorTest",
    "replicant.ChannelChangeTest",
    "replicant.ChannelSchemaTest",
    "replicant.ConnectionTest",
    "replicant.ConnectorEntryTest",
    "replicant.ConnectorStateTest",
    "replicant.ConnectorTest",
    "replicant.ConvergerTest",
    "replicant.EntitySchemaTest",
    "replicant.EntityServiceTest",
    "replicant.EntityTest",
    "replicant.MessageResponseTest",
    "replicant.RateLimitedValueTest",
    "replicant.ReplicantContextTest",
    "replicant.ReplicantLoggerTest",
    "replicant.ReplicantRuntimeTest",
    "replicant.ReplicantServiceTest",
    "replicant.ReplicantTest",
    "replicant.ReplicantUtilTest",
    "replicant.RequestEntryTest",
    "replicant.RequestTest",
    "replicant.SchemaServiceTest",
    "replicant.SpyImplTest",
    "replicant.SubscriptionServiceTest",
    "replicant.SubscriptionTest",
    "replicant.SystemSchemaTest",
    "replicant.TransportContextImplTest",
    "replicant.ValidatorTest",
    "replicant.ZoneTest",
    "replicant.messages.EntityChangeTest",
    "replicant.messages.UpdateMessageTest",
    "replicant.spy.AreaOfInterestCreatedEventTest",
    "replicant.spy.AreaOfInterestDisposedEventTest",
    "replicant.spy.AreaOfInterestFilterUpdatedEventTest",
    "replicant.spy.AreaOfInterestStatusUpdatedEventTest",
    "replicant.spy.ConnectFailureEventTest",
    "replicant.spy.ConnectedEventTest",
    "replicant.spy.DataLoadStatusTest",
    "replicant.spy.DisconnectFailureEventTest",
    "replicant.spy.DisconnectedEventTest",
    "replicant.spy.ExecCompletedEventTest",
    "replicant.spy.ExecRequestQueuedEventTest",
    "replicant.spy.ExecStartedEventTest",
    "replicant.spy.InSyncEventTest",
    "replicant.spy.MessageProcessFailureEventTest",
    "replicant.spy.MessageProcessedEventTest",
    "replicant.spy.MessageReadFailureEventTest",
    "replicant.spy.OutOfSyncEventTest",
    "replicant.spy.RequestCompletedEventTest",
    "replicant.spy.RequestStartedEventTest",
    "replicant.spy.RestartEventTest",
    "replicant.spy.SubscribeCompletedEventTest",
    "replicant.spy.SubscribeRequestQueuedEventTest",
    "replicant.spy.SubscribeStartedEventTest",
    "replicant.spy.SubscriptionCreatedEventTest",
    "replicant.spy.SubscriptionDisposedEventTest",
    "replicant.spy.SubscriptionOrphanedEventTest",
    "replicant.spy.SubscriptionUpdateCompletedEventTest",
    "replicant.spy.SubscriptionUpdateRequestQueuedEventTest",
    "replicant.spy.SubscriptionUpdateStartedEventTest",
    "replicant.spy.SyncRequestEventTest",
    "replicant.spy.UnsubscribeCompletedEventTest",
    "replicant.spy.UnsubscribeRequestQueuedEventTest",
    "replicant.spy.UnsubscribeStartedEventTest",
    "replicant.spy.tools.ReplicantSpyUtilTest",
    "replicant.spy.tools.SpyEventProcessorTest",
]

exports_files(
    ["diagnostic_messages.json"],
    visibility = ["//client/src/test/java/replicant:__subpackages__"],
)

java_library(
    name = "client_test_support_lib",
    srcs = [
        "AbstractReplicantTest.java",
        "MessageCollector.java",
        "TestCacheService.java",
        "TestLogger.java",
        "TestSpyEventHandler.java",
        "ValueUtil.java",
        "package-info.java",
    ],
    visibility = ["//client:__pkg__"],
    deps = [
        "//client:client_lib",
        "//shared:shared_lib",
        "//third_party/java:arez_core",
        "//third_party/java:arez_extras_testng",
        "//third_party/java:braincheck_core",
        "//third_party/java:braincheck_testng",
        "//third_party/java:javax_json",
        "//third_party/java:mockito_core",
        "//third_party/java:testng",
        "//third_party/java:zemeckis_core",
    ],
)

java_library(
    name = "client_tests_lib",
    srcs = [
        "AreaOfInterestRequestTest.java",
        "AreaOfInterestServiceTest.java",
        "AreaOfInterestTest.java",
        "CacheEntryTest.java",
        "ChannelAddressTest.java",
        "ChannelChangeDescriptorTest.java",
        "ChannelChangeTest.java",
        "ChannelSchemaTest.java",
        "ConnectionTest.java",
        "ConnectorEntryTest.java",
        "ConnectorStateTest.java",
        "ConnectorTest.java",
        "ConvergerTest.java",
        "EntitySchemaTest.java",
        "EntityServiceTest.java",
        "EntityTest.java",
        "MessageResponseTest.java",
        "RateLimitedValueTest.java",
        "ReplicantContextTest.java",
        "ReplicantLoggerTest.java",
        "ReplicantRuntimeTest.java",
        "ReplicantServiceTest.java",
        "ReplicantTest.java",
        "ReplicantUtilTest.java",
        "RequestEntryTest.java",
        "RequestTest.java",
        "SchemaServiceTest.java",
        "SpyImplTest.java",
        "SubscriptionServiceTest.java",
        "SubscriptionTest.java",
        "SystemSchemaTest.java",
        "TransportContextImplTest.java",
        "ValidatorTest.java",
        "ZoneTest.java",
        "package-info.java",
    ],
    visibility = [
        "//client/src/test/java/replicant:__pkg__",
    ],
    deps = [
        "//client:client_test_support",
        "//third_party/java:zemeckis_core",
    ],
)

java_testng(
    name = "client_diagnostic_messages_test",
    srcs = ["DiagnosticMessagesSuite.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = [
        "-Dreplicant.check_diagnostic_messages=true",
        "-Dreplicant.diagnostic_messages_file=$(rootpath //client/src/test/java/replicant:diagnostic_messages.json)",
    ],
    test_class = ",".join(CLIENT_TEST_CLASSES),
    deps = [
        ":client_tests_lib",
        "//client:client_test_support",
        "//client/src/test/java/replicant/messages:messages_tests_lib",
        "//client/src/test/java/replicant/spy:spy_tests_lib",
        "//client/src/test/java/replicant/spy/tools:spy_tools_tests_lib",
    ],
)

java_testng(
    name = "AreaOfInterestRequestTest",
    srcs = ["AreaOfInterestRequestTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.AreaOfInterestRequestTest",
    deps = ["//client:client_test_support"],
)

java_testng(
    name = "AreaOfInterestServiceTest",
    srcs = ["AreaOfInterestServiceTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.AreaOfInterestServiceTest",
    deps = ["//client:client_test_support"],
)

java_testng(
    name = "AreaOfInterestTest",
    srcs = ["AreaOfInterestTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.AreaOfInterestTest",
    deps = [
        "//client:client_test_support",
        "//third_party/java:zemeckis_core",
    ],
)

java_testng(
    name = "CacheEntryTest",
    srcs = ["CacheEntryTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.CacheEntryTest",
    deps = ["//client:client_test_support"],
)

java_testng(
    name = "ChannelAddressTest",
    srcs = ["ChannelAddressTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.ChannelAddressTest",
    deps = ["//client:client_test_support"],
)

java_testng(
    name = "ChannelChangeDescriptorTest",
    srcs = ["ChannelChangeDescriptorTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.ChannelChangeDescriptorTest",
    deps = ["//client:client_test_support"],
)

java_testng(
    name = "ChannelChangeTest",
    srcs = ["ChannelChangeTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.ChannelChangeTest",
    deps = ["//client:client_test_support"],
)

java_testng(
    name = "ChannelSchemaTest",
    srcs = ["ChannelSchemaTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.ChannelSchemaTest",
    deps = ["//client:client_test_support"],
)

java_testng(
    name = "ConnectionTest",
    srcs = ["ConnectionTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.ConnectionTest",
    deps = ["//client:client_test_support"],
)

java_testng(
    name = "ConnectorEntryTest",
    srcs = ["ConnectorEntryTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.ConnectorEntryTest",
    deps = ["//client:client_test_support"],
)

java_testng(
    name = "ConnectorStateTest",
    srcs = ["ConnectorStateTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.ConnectorStateTest",
    deps = ["//client:client_test_support"],
)

java_testng(
    name = "ConnectorTest",
    srcs = ["ConnectorTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.ConnectorTest",
    deps = ["//client:client_test_support"],
)

java_testng(
    name = "ConvergerTest",
    srcs = ["ConvergerTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.ConvergerTest",
    deps = ["//client:client_test_support"],
)

java_testng(
    name = "EntitySchemaTest",
    srcs = ["EntitySchemaTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.EntitySchemaTest",
    deps = ["//client:client_test_support"],
)

java_testng(
    name = "EntityServiceTest",
    srcs = ["EntityServiceTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.EntityServiceTest",
    deps = ["//client:client_test_support"],
)

java_testng(
    name = "EntityTest",
    srcs = ["EntityTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.EntityTest",
    deps = ["//client:client_test_support"],
)

java_testng(
    name = "MessageResponseTest",
    srcs = ["MessageResponseTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.MessageResponseTest",
    deps = ["//client:client_test_support"],
)

java_testng(
    name = "RateLimitedValueTest",
    srcs = ["RateLimitedValueTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.RateLimitedValueTest",
    deps = ["//client:client_test_support"],
)

java_testng(
    name = "ReplicantContextTest",
    srcs = ["ReplicantContextTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.ReplicantContextTest",
    deps = ["//client:client_test_support"],
)

java_testng(
    name = "ReplicantLoggerTest",
    srcs = ["ReplicantLoggerTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.ReplicantLoggerTest",
    deps = ["//client:client_test_support"],
)

java_testng(
    name = "ReplicantRuntimeTest",
    srcs = ["ReplicantRuntimeTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.ReplicantRuntimeTest",
    deps = ["//client:client_test_support"],
)

java_testng(
    name = "ReplicantServiceTest",
    srcs = ["ReplicantServiceTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.ReplicantServiceTest",
    deps = ["//client:client_test_support"],
)

java_testng(
    name = "ReplicantTest",
    srcs = ["ReplicantTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.ReplicantTest",
    deps = ["//client:client_test_support"],
)

java_testng(
    name = "ReplicantUtilTest",
    srcs = ["ReplicantUtilTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.ReplicantUtilTest",
    deps = ["//client:client_test_support"],
)

java_testng(
    name = "RequestEntryTest",
    srcs = ["RequestEntryTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.RequestEntryTest",
    deps = ["//client:client_test_support"],
)

java_testng(
    name = "RequestTest",
    srcs = ["RequestTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.RequestTest",
    deps = ["//client:client_test_support"],
)

java_testng(
    name = "SchemaServiceTest",
    srcs = ["SchemaServiceTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.SchemaServiceTest",
    deps = ["//client:client_test_support"],
)

java_testng(
    name = "SpyImplTest",
    srcs = ["SpyImplTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.SpyImplTest",
    deps = ["//client:client_test_support"],
)

java_testng(
    name = "SubscriptionServiceTest",
    srcs = ["SubscriptionServiceTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.SubscriptionServiceTest",
    deps = ["//client:client_test_support"],
)

java_testng(
    name = "SubscriptionTest",
    srcs = ["SubscriptionTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.SubscriptionTest",
    deps = ["//client:client_test_support"],
)

java_testng(
    name = "SystemSchemaTest",
    srcs = ["SystemSchemaTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.SystemSchemaTest",
    deps = ["//client:client_test_support"],
)

java_testng(
    name = "TransportContextImplTest",
    srcs = ["TransportContextImplTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.TransportContextImplTest",
    deps = ["//client:client_test_support"],
)

java_testng(
    name = "ValidatorTest",
    srcs = ["ValidatorTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.ValidatorTest",
    deps = ["//client:client_test_support"],
)

java_testng(
    name = "ZoneTest",
    srcs = ["ZoneTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.ZoneTest",
    deps = ["//client:client_test_support"],
)
