load("//third_party/java:rules.bzl", "java_library", "java_testng")

CLIENT_TEST_JVM_FLAGS = [
    "-Dreplicant.check_diagnostic_messages=false",
    "-Dreplicant.diagnostic_messages_file=$(rootpath //client/src/test/java/replicant:diagnostic_messages.json)",
]

CLIENT_TEST_DATA = ["//client/src/test/java/replicant:diagnostic_messages.json"]

java_library(
    name = "messages_test_support_lib",
    srcs = [
        "EntityChangeDataImpl.java",
    ],
    visibility = ["//client:__pkg__"],
    deps = [
        "//client:client_lib",
        "//third_party/java:javax_annotation",
    ],
)

java_library(
    name = "messages_tests_lib",
    srcs = [
        "EntityChangeTest.java",
        "UpdateMessageTest.java",
    ],
    visibility = [
        "//client/src/test/java/replicant:__pkg__",
    ],
    deps = ["//client:client_test_support"],
)

java_testng(
    name = "EntityChangeTest",
    srcs = ["EntityChangeTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.messages.EntityChangeTest",
    deps = ["//client:client_test_support"],
)

java_testng(
    name = "UpdateMessageTest",
    srcs = ["UpdateMessageTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.messages.UpdateMessageTest",
    deps = ["//client:client_test_support"],
)
