load("@rules_java//java:defs.bzl", native_java_library = "java_library")
load("//third_party/java:rules.bzl", "java_testng")

CLIENT_TEST_JVM_FLAGS = [
    "-Dreplicant.check_diagnostic_messages=false",
    "-Dreplicant.diagnostic_messages_file=$(rootpath //client/src/test/java/replicant:diagnostic_messages.json)",
]

CLIENT_TEST_DATA = ["//client/src/test/java/replicant:diagnostic_messages.json"]

TEST_LIBRARY_JAVACOPTS = [
    "-XepDisableAllChecks",
    "-Werror",
    "-Xlint:all,-processing,-serial,-options,-deprecation,-this-escape",
    "-Xmaxerrs",
    "10000",
    "-Xmaxwarns",
    "10000",
]

native_java_library(
    name = "spy_tests_lib",
    srcs = [
        "AreaOfInterestCreatedEventTest.java",
        "AreaOfInterestDisposedEventTest.java",
        "AreaOfInterestFilterUpdatedEventTest.java",
        "AreaOfInterestStatusUpdatedEventTest.java",
        "ConnectFailureEventTest.java",
        "ConnectedEventTest.java",
        "DataLoadStatusTest.java",
        "DisconnectFailureEventTest.java",
        "DisconnectedEventTest.java",
        "ExecCompletedEventTest.java",
        "ExecRequestQueuedEventTest.java",
        "ExecStartedEventTest.java",
        "InSyncEventTest.java",
        "MessageProcessFailureEventTest.java",
        "MessageProcessedEventTest.java",
        "MessageReadFailureEventTest.java",
        "OutOfSyncEventTest.java",
        "RequestCompletedEventTest.java",
        "RequestStartedEventTest.java",
        "RestartEventTest.java",
        "SubscribeCompletedEventTest.java",
        "SubscribeRequestQueuedEventTest.java",
        "SubscribeStartedEventTest.java",
        "SubscriptionCreatedEventTest.java",
        "SubscriptionDisposedEventTest.java",
        "SubscriptionOrphanedEventTest.java",
        "SubscriptionUpdateCompletedEventTest.java",
        "SubscriptionUpdateRequestQueuedEventTest.java",
        "SubscriptionUpdateStartedEventTest.java",
        "SyncRequestEventTest.java",
        "UnsubscribeCompletedEventTest.java",
        "UnsubscribeRequestQueuedEventTest.java",
        "UnsubscribeStartedEventTest.java",
    ],
    javacopts = TEST_LIBRARY_JAVACOPTS,
    visibility = [
        "//client/src/test/java/replicant:__pkg__",
    ],
    deps = ["//client:client_test_support"],
)

java_testng(
    name = "area_of_interest_created_event_test",
    srcs = ["AreaOfInterestCreatedEventTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.spy.AreaOfInterestCreatedEventTest",
    deps = ["//client:client_test_support"],
)

java_testng(
    name = "area_of_interest_disposed_event_test",
    srcs = ["AreaOfInterestDisposedEventTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.spy.AreaOfInterestDisposedEventTest",
    deps = ["//client:client_test_support"],
)

java_testng(
    name = "area_of_interest_filter_updated_event_test",
    srcs = ["AreaOfInterestFilterUpdatedEventTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.spy.AreaOfInterestFilterUpdatedEventTest",
    deps = ["//client:client_test_support"],
)

java_testng(
    name = "area_of_interest_status_updated_event_test",
    srcs = ["AreaOfInterestStatusUpdatedEventTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.spy.AreaOfInterestStatusUpdatedEventTest",
    deps = ["//client:client_test_support"],
)

java_testng(
    name = "connect_failure_event_test",
    srcs = ["ConnectFailureEventTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.spy.ConnectFailureEventTest",
    deps = ["//client:client_test_support"],
)

java_testng(
    name = "connected_event_test",
    srcs = ["ConnectedEventTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.spy.ConnectedEventTest",
    deps = ["//client:client_test_support"],
)

java_testng(
    name = "data_load_status_test",
    srcs = ["DataLoadStatusTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.spy.DataLoadStatusTest",
    deps = ["//client:client_test_support"],
)

java_testng(
    name = "disconnect_failure_event_test",
    srcs = ["DisconnectFailureEventTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.spy.DisconnectFailureEventTest",
    deps = ["//client:client_test_support"],
)

java_testng(
    name = "disconnected_event_test",
    srcs = ["DisconnectedEventTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.spy.DisconnectedEventTest",
    deps = ["//client:client_test_support"],
)

java_testng(
    name = "exec_completed_event_test",
    srcs = ["ExecCompletedEventTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.spy.ExecCompletedEventTest",
    deps = ["//client:client_test_support"],
)

java_testng(
    name = "exec_request_queued_event_test",
    srcs = ["ExecRequestQueuedEventTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.spy.ExecRequestQueuedEventTest",
    deps = ["//client:client_test_support"],
)

java_testng(
    name = "exec_started_event_test",
    srcs = ["ExecStartedEventTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.spy.ExecStartedEventTest",
    deps = ["//client:client_test_support"],
)

java_testng(
    name = "in_sync_event_test",
    srcs = ["InSyncEventTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.spy.InSyncEventTest",
    deps = ["//client:client_test_support"],
)

java_testng(
    name = "message_process_failure_event_test",
    srcs = ["MessageProcessFailureEventTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.spy.MessageProcessFailureEventTest",
    deps = ["//client:client_test_support"],
)

java_testng(
    name = "message_processed_event_test",
    srcs = ["MessageProcessedEventTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.spy.MessageProcessedEventTest",
    deps = ["//client:client_test_support"],
)

java_testng(
    name = "message_read_failure_event_test",
    srcs = ["MessageReadFailureEventTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.spy.MessageReadFailureEventTest",
    deps = ["//client:client_test_support"],
)

java_testng(
    name = "out_of_sync_event_test",
    srcs = ["OutOfSyncEventTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.spy.OutOfSyncEventTest",
    deps = ["//client:client_test_support"],
)

java_testng(
    name = "request_completed_event_test",
    srcs = ["RequestCompletedEventTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.spy.RequestCompletedEventTest",
    deps = ["//client:client_test_support"],
)

java_testng(
    name = "request_started_event_test",
    srcs = ["RequestStartedEventTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.spy.RequestStartedEventTest",
    deps = ["//client:client_test_support"],
)

java_testng(
    name = "restart_event_test",
    srcs = ["RestartEventTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.spy.RestartEventTest",
    deps = ["//client:client_test_support"],
)

java_testng(
    name = "subscribe_completed_event_test",
    srcs = ["SubscribeCompletedEventTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.spy.SubscribeCompletedEventTest",
    deps = ["//client:client_test_support"],
)

java_testng(
    name = "subscribe_request_queued_event_test",
    srcs = ["SubscribeRequestQueuedEventTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.spy.SubscribeRequestQueuedEventTest",
    deps = ["//client:client_test_support"],
)

java_testng(
    name = "subscribe_started_event_test",
    srcs = ["SubscribeStartedEventTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.spy.SubscribeStartedEventTest",
    deps = ["//client:client_test_support"],
)

java_testng(
    name = "subscription_created_event_test",
    srcs = ["SubscriptionCreatedEventTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.spy.SubscriptionCreatedEventTest",
    deps = ["//client:client_test_support"],
)

java_testng(
    name = "subscription_disposed_event_test",
    srcs = ["SubscriptionDisposedEventTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.spy.SubscriptionDisposedEventTest",
    deps = ["//client:client_test_support"],
)

java_testng(
    name = "subscription_orphaned_event_test",
    srcs = ["SubscriptionOrphanedEventTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.spy.SubscriptionOrphanedEventTest",
    deps = ["//client:client_test_support"],
)

java_testng(
    name = "subscription_update_completed_event_test",
    srcs = ["SubscriptionUpdateCompletedEventTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.spy.SubscriptionUpdateCompletedEventTest",
    deps = ["//client:client_test_support"],
)

java_testng(
    name = "subscription_update_request_queued_event_test",
    srcs = ["SubscriptionUpdateRequestQueuedEventTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.spy.SubscriptionUpdateRequestQueuedEventTest",
    deps = ["//client:client_test_support"],
)

java_testng(
    name = "subscription_update_started_event_test",
    srcs = ["SubscriptionUpdateStartedEventTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.spy.SubscriptionUpdateStartedEventTest",
    deps = ["//client:client_test_support"],
)

java_testng(
    name = "sync_request_event_test",
    srcs = ["SyncRequestEventTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.spy.SyncRequestEventTest",
    deps = ["//client:client_test_support"],
)

java_testng(
    name = "unsubscribe_completed_event_test",
    srcs = ["UnsubscribeCompletedEventTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.spy.UnsubscribeCompletedEventTest",
    deps = ["//client:client_test_support"],
)

java_testng(
    name = "unsubscribe_request_queued_event_test",
    srcs = ["UnsubscribeRequestQueuedEventTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.spy.UnsubscribeRequestQueuedEventTest",
    deps = ["//client:client_test_support"],
)

java_testng(
    name = "unsubscribe_started_event_test",
    srcs = ["UnsubscribeStartedEventTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.spy.UnsubscribeStartedEventTest",
    deps = ["//client:client_test_support"],
)
