load("//third_party/java:rules.bzl", "java_library", "java_testng")

CLIENT_TEST_JVM_FLAGS = [
    "-Dreplicant.check_diagnostic_messages=false",
    "-Dreplicant.diagnostic_messages_file=$(rootpath //client/src/test/java/replicant:diagnostic_messages.json)",
]

CLIENT_TEST_DATA = ["//client/src/test/java/replicant:diagnostic_messages.json"]

java_library(
    name = "spy_tests_lib",
    srcs = [
        "AreaOfInterestCreatedEventTest.java",
        "AreaOfInterestDisposedEventTest.java",
        "AreaOfInterestFilterUpdatedEventTest.java",
        "AreaOfInterestStatusUpdatedEventTest.java",
        "ConnectFailureEventTest.java",
        "ConnectedEventTest.java",
        "DataLoadStatusTest.java",
        "DisconnectFailureEventTest.java",
        "DisconnectedEventTest.java",
        "ExecCompletedEventTest.java",
        "ExecRequestQueuedEventTest.java",
        "ExecStartedEventTest.java",
        "InSyncEventTest.java",
        "MessageProcessFailureEventTest.java",
        "MessageProcessedEventTest.java",
        "MessageReadFailureEventTest.java",
        "OutOfSyncEventTest.java",
        "RequestCompletedEventTest.java",
        "RequestStartedEventTest.java",
        "RestartEventTest.java",
        "SubscribeCompletedEventTest.java",
        "SubscribeRequestQueuedEventTest.java",
        "SubscribeStartedEventTest.java",
        "SubscriptionCreatedEventTest.java",
        "SubscriptionDisposedEventTest.java",
        "SubscriptionOrphanedEventTest.java",
        "SubscriptionUpdateCompletedEventTest.java",
        "SubscriptionUpdateRequestQueuedEventTest.java",
        "SubscriptionUpdateStartedEventTest.java",
        "SyncRequestEventTest.java",
        "UnsubscribeCompletedEventTest.java",
        "UnsubscribeRequestQueuedEventTest.java",
        "UnsubscribeStartedEventTest.java",
    ],
    visibility = [
        "//client/src/test/java/replicant:__pkg__",
    ],
    deps = ["//client:client_test_support"],
)

java_testng(
    name = "AreaOfInterestCreatedEventTest",
    srcs = ["AreaOfInterestCreatedEventTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.spy.AreaOfInterestCreatedEventTest",
    deps = ["//client:client_test_support"],
)

java_testng(
    name = "AreaOfInterestDisposedEventTest",
    srcs = ["AreaOfInterestDisposedEventTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.spy.AreaOfInterestDisposedEventTest",
    deps = ["//client:client_test_support"],
)

java_testng(
    name = "AreaOfInterestFilterUpdatedEventTest",
    srcs = ["AreaOfInterestFilterUpdatedEventTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.spy.AreaOfInterestFilterUpdatedEventTest",
    deps = ["//client:client_test_support"],
)

java_testng(
    name = "AreaOfInterestStatusUpdatedEventTest",
    srcs = ["AreaOfInterestStatusUpdatedEventTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.spy.AreaOfInterestStatusUpdatedEventTest",
    deps = ["//client:client_test_support"],
)

java_testng(
    name = "ConnectFailureEventTest",
    srcs = ["ConnectFailureEventTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.spy.ConnectFailureEventTest",
    deps = ["//client:client_test_support"],
)

java_testng(
    name = "ConnectedEventTest",
    srcs = ["ConnectedEventTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.spy.ConnectedEventTest",
    deps = ["//client:client_test_support"],
)

java_testng(
    name = "DataLoadStatusTest",
    srcs = ["DataLoadStatusTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.spy.DataLoadStatusTest",
    deps = ["//client:client_test_support"],
)

java_testng(
    name = "DisconnectFailureEventTest",
    srcs = ["DisconnectFailureEventTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.spy.DisconnectFailureEventTest",
    deps = ["//client:client_test_support"],
)

java_testng(
    name = "DisconnectedEventTest",
    srcs = ["DisconnectedEventTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.spy.DisconnectedEventTest",
    deps = ["//client:client_test_support"],
)

java_testng(
    name = "ExecCompletedEventTest",
    srcs = ["ExecCompletedEventTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.spy.ExecCompletedEventTest",
    deps = ["//client:client_test_support"],
)

java_testng(
    name = "ExecRequestQueuedEventTest",
    srcs = ["ExecRequestQueuedEventTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.spy.ExecRequestQueuedEventTest",
    deps = ["//client:client_test_support"],
)

java_testng(
    name = "ExecStartedEventTest",
    srcs = ["ExecStartedEventTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.spy.ExecStartedEventTest",
    deps = ["//client:client_test_support"],
)

java_testng(
    name = "InSyncEventTest",
    srcs = ["InSyncEventTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.spy.InSyncEventTest",
    deps = ["//client:client_test_support"],
)

java_testng(
    name = "MessageProcessFailureEventTest",
    srcs = ["MessageProcessFailureEventTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.spy.MessageProcessFailureEventTest",
    deps = ["//client:client_test_support"],
)

java_testng(
    name = "MessageProcessedEventTest",
    srcs = ["MessageProcessedEventTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.spy.MessageProcessedEventTest",
    deps = ["//client:client_test_support"],
)

java_testng(
    name = "MessageReadFailureEventTest",
    srcs = ["MessageReadFailureEventTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.spy.MessageReadFailureEventTest",
    deps = ["//client:client_test_support"],
)

java_testng(
    name = "OutOfSyncEventTest",
    srcs = ["OutOfSyncEventTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.spy.OutOfSyncEventTest",
    deps = ["//client:client_test_support"],
)

java_testng(
    name = "RequestCompletedEventTest",
    srcs = ["RequestCompletedEventTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.spy.RequestCompletedEventTest",
    deps = ["//client:client_test_support"],
)

java_testng(
    name = "RequestStartedEventTest",
    srcs = ["RequestStartedEventTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.spy.RequestStartedEventTest",
    deps = ["//client:client_test_support"],
)

java_testng(
    name = "RestartEventTest",
    srcs = ["RestartEventTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.spy.RestartEventTest",
    deps = ["//client:client_test_support"],
)

java_testng(
    name = "SubscribeCompletedEventTest",
    srcs = ["SubscribeCompletedEventTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.spy.SubscribeCompletedEventTest",
    deps = ["//client:client_test_support"],
)

java_testng(
    name = "SubscribeRequestQueuedEventTest",
    srcs = ["SubscribeRequestQueuedEventTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.spy.SubscribeRequestQueuedEventTest",
    deps = ["//client:client_test_support"],
)

java_testng(
    name = "SubscribeStartedEventTest",
    srcs = ["SubscribeStartedEventTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.spy.SubscribeStartedEventTest",
    deps = ["//client:client_test_support"],
)

java_testng(
    name = "SubscriptionCreatedEventTest",
    srcs = ["SubscriptionCreatedEventTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.spy.SubscriptionCreatedEventTest",
    deps = ["//client:client_test_support"],
)

java_testng(
    name = "SubscriptionDisposedEventTest",
    srcs = ["SubscriptionDisposedEventTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.spy.SubscriptionDisposedEventTest",
    deps = ["//client:client_test_support"],
)

java_testng(
    name = "SubscriptionOrphanedEventTest",
    srcs = ["SubscriptionOrphanedEventTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.spy.SubscriptionOrphanedEventTest",
    deps = ["//client:client_test_support"],
)

java_testng(
    name = "SubscriptionUpdateCompletedEventTest",
    srcs = ["SubscriptionUpdateCompletedEventTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.spy.SubscriptionUpdateCompletedEventTest",
    deps = ["//client:client_test_support"],
)

java_testng(
    name = "SubscriptionUpdateRequestQueuedEventTest",
    srcs = ["SubscriptionUpdateRequestQueuedEventTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.spy.SubscriptionUpdateRequestQueuedEventTest",
    deps = ["//client:client_test_support"],
)

java_testng(
    name = "SubscriptionUpdateStartedEventTest",
    srcs = ["SubscriptionUpdateStartedEventTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.spy.SubscriptionUpdateStartedEventTest",
    deps = ["//client:client_test_support"],
)

java_testng(
    name = "SyncRequestEventTest",
    srcs = ["SyncRequestEventTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.spy.SyncRequestEventTest",
    deps = ["//client:client_test_support"],
)

java_testng(
    name = "UnsubscribeCompletedEventTest",
    srcs = ["UnsubscribeCompletedEventTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.spy.UnsubscribeCompletedEventTest",
    deps = ["//client:client_test_support"],
)

java_testng(
    name = "UnsubscribeRequestQueuedEventTest",
    srcs = ["UnsubscribeRequestQueuedEventTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.spy.UnsubscribeRequestQueuedEventTest",
    deps = ["//client:client_test_support"],
)

java_testng(
    name = "UnsubscribeStartedEventTest",
    srcs = ["UnsubscribeStartedEventTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.spy.UnsubscribeStartedEventTest",
    deps = ["//client:client_test_support"],
)
