load("//third_party/java:rules.bzl", "java_server_library", "java_testng")

java_server_library(
    name = "server_test_support_lib",
    srcs = [
        "MessageTestUtil.java",
        "ValueUtil.java",
        "package-info.java",
    ],
    visibility = ["//server:__pkg__"],
    deps = [
        "//server/src/main/java/replicant/server:server_core_lib",
        "//third_party/java:testng",
    ],
)

java_testng(
    name = "ChangeSetTest",
    srcs = ["ChangeSetTest.java"],
    test_class = "replicant.server.ChangeSetTest",
    deps = ["//server:server_test_support"],
)

java_testng(
    name = "ChangeTest",
    srcs = ["ChangeTest.java"],
    test_class = "replicant.server.ChangeTest",
    deps = ["//server:server_test_support"],
)

java_testng(
    name = "ChannelAddressTest",
    srcs = ["ChannelAddressTest.java"],
    test_class = "replicant.server.ChannelAddressTest",
    deps = ["//server:server_test_support"],
)

java_testng(
    name = "ChannelLinkTest",
    srcs = ["ChannelLinkTest.java"],
    test_class = "replicant.server.ChannelLinkTest",
    deps = ["//server:server_test_support"],
)

java_testng(
    name = "EntityMessageSetTest",
    srcs = ["EntityMessageSetTest.java"],
    test_class = "replicant.server.EntityMessageSetTest",
    deps = ["//server:server_test_support"],
)

java_testng(
    name = "EntityMessageSorterTest",
    srcs = ["EntityMessageSorterTest.java"],
    test_class = "replicant.server.EntityMessageSorterTest",
    deps = ["//server:server_test_support"],
)

java_testng(
    name = "EntityMessageTest",
    srcs = ["EntityMessageTest.java"],
    test_class = "replicant.server.EntityMessageTest",
    deps = ["//server:server_test_support"],
)

java_testng(
    name = "FilterUtilTest",
    srcs = ["FilterUtilTest.java"],
    test_class = "replicant.server.FilterUtilTest",
    deps = ["//server:server_test_support"],
)
