load("//third_party/java:rules.bzl", "java_library")

SHARED_JAVA_SRCS = [
    "Messages.java",
    "SharedConstants.java",
    "package-info.java",
]

filegroup(
    name = "shared_j2cl_srcs",
    srcs = SHARED_JAVA_SRCS,
    visibility = ["//visibility:public"],
)

java_library(
    name = "shared_lib",
    srcs = SHARED_JAVA_SRCS,
    resource_strip_prefix = "shared/src/main/java",
    resources = SHARED_JAVA_SRCS,
    visibility = [
        "//shared:__pkg__",
        "//tools/release:__pkg__",
    ],
)
